@@ -97,6 +97,7 @@
         --with-perl \
         --with-perlembed=/usr/lib/perl5/5.10.0/i386-linux-thread-multi/CORE \
         --with-rubyembed=/usr/lib/ruby/1.8/i386-linux \
+	--with-javascript=internal \
         --with-build-extlibdep \
         --with-build-maxextlibdep \
         --enable-build-pic \
