@@ -1,5 +1,6 @@
 
 5.2a4 -> 5.2b1:
+    - jbj: js: stub-in a javascript interpreter wrapper.
     - jbj: tcl: load and use $argv and $argc.
     - jbj: tcl: fix: don't append multiple newlines.
     - jbj: perl: load and use @ARGV. Note that shell $1 ends up in perl $ARGV[0]
